--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Household/detail.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Household/detail.html.twig
@@ -88,7 +88,7 @@
                 {% endif %}
                 </td>
                 <td>
-                {% if person.spouse %}
+                {% if person.secondary %}
                     <span class="label label-success">Yes</span>
                 {% endif %}
                 </td>
