Remove anchor wrapper around "Email Us" in footer
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -116,7 +116,7 @@
                 <p>200 Oak Street SE, Minneapolis, MN, 55455-2002</p>
                 <p>Room 264, Suite 250</p>
                 <p><abbr title="Phone Number">P</abbr>: <a href="tel:6126264403">612-626-4403</a></p>
-                <p><a href="#">Email Us</a>: <a href="mailto:umra@umn.edu">umra@umn.edu</a></p>
+                <p>Email Us: <a href="mailto:umra@umn.edu">umra@umn.edu</a></p>
             </address>
         </section>
         <!-- END OPTIONAL UNIT FOOTER -->
