--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Household/index.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Household/index.html.twig
@@ -1,9 +1,40 @@
 {% extends 'UMRAMemberBundle::nav.html.twig' %}
 
 {% block modulecontent -%}
-    <div class="page-header">
-        <h1>Households</h1>
-    </div>
+    <h3>Households</h3>
+
+    <form action="{{ path('UMRA_Household') }}" method="GET" class="row">
+        <div class="col-sm-3">
+            <div class="form-group">
+                <label class="control-label">Find by Name</label>
+                <input class="form-control" type="search" name="name" value="{{ name }}" />
+            </div>
+        </div>
+        <div class="col-sm-3">
+            <div class="form-group">
+                <label class="control-label">
+                    Current UMRA Member?
+                </label>
+                <div>
+                    <label class="radio-inline">
+                        <input type="radio" name="active" value="1"> Yes
+                    </label>
+                    <label class="radio-inline">
+                        <input type="radio" name="active" value="0"> No
+                    </label>
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <button type="submit" class="btn btn-primary btn-lg">
+                <span class="fa fa-search"></span>
+                Search
+            </button>
+        </div>
+    </form>
+
+    <hr />
 
     <table class="table table-striped table-hover">
         <thead>
