Generalize registration form components and add a single-form household edit variant
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Household/index.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Household/index.html.twig
@@ -58,6 +58,11 @@
                     <li>
                         <a class="btn btn-primary btn-sm" href="{{ path('UMRA_Household_show', { 'id': entity.id }) }}">View</a>
                     </li>
+                    <li>
+                        <a class="btn btn-default btn-sm" href="{{ path('UMRA_Household_edit_full', { 'id': entity.id }) }}">
+                            Full Edit
+                        </a>
+                    </li>
                 </ul>
                 </td>
             </tr>
