--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Person/_form_full.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Person/_form_full.html.twig
@@ -11,8 +11,13 @@
             nickname: '{{ member.nickname.vars.value }}',
             nametagname: '{{ member.nametagname.vars.value }}'
         }">
-            <h4>
+            <h4 class="clearfix">
                 <span class="label label-info">Person {{ loop.index }}</span>
+                {% if allow_delete is defined and allow_delete %}
+                <button class="btn-person-del close pull-right" type="button" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                {% endif %}
             </h4>
             <div class="row">
                 <div class="col-sm-6">
