--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Registration/register.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Registration/register.html.twig
@@ -17,12 +17,14 @@
 			}}
 			{% include 'UMRAMemberBundle:Person:_form_full.html.twig' with {
 				'members': form.members,
-				'allow_add': true
+				'allow_add': true,
+				'allow_delete': true
 			} %}
 			{{ form_row(form.household.postalname, { attr: { 'ng-model': 'household.postalname' }}) }}
 			{% include 'UMRAMemberBundle:Residence:_form_full.html.twig' with {
 				'residences': form.residences,
-				'allow_add': true
+				'allow_add': true,
+				'allow_delete': true
 			} %}
 
 			<div class="panel panel-default">
@@ -153,259 +155,8 @@
 {% endblock %}
 
 {% block javascripts %}
-<script id="tpl-members-group" type="text/ng-template">
-	<div class="list-group-item" ng-if="household.members[__index__] = {
-			firstname: '', lastname: '' }">
-		<div class="row">
-			<div class="col-sm-6">
-				<div class="form-group">
-					{{ form_label(form.members.vars.prototype.firstname) }}
-					{{ form_widget(form.members.vars.prototype.firstname) }}
-				</div>
-			</div>
-			<div class="col-sm-6">
-				<div class="form-group">
-					{{ form_label(form.members.vars.prototype.lastname) }}
-					{{ form_widget(form.members.vars.prototype.lastname) }}
-				</div>
-			</div>
-		</div>
-		<div class="form-group">
-			{{ form_label(form.members.vars.prototype.fullname) }}
-			{{ form_widget(form.members.vars.prototype.fullname) }}
-		</div>
-		<div class="form-group">
-			{{ form_label(form.members.vars.prototype.nametagname) }}
-			{{ form_widget(form.members.vars.prototype.nametagname) }}
-		</div>
-		<div class="row">
-			<div class="col-sm-6">
-				<div class="form-group">
-					{{ form_label(form.members.vars.prototype.nickname) }}
-					{{ form_widget(form.members.vars.prototype.nickname) }}
-				</div>
-			</div>
-			<div class="col-sm-6">
-				<div class="form-group">
-					{{ form_label(form.members.vars.prototype.membersince) }}
-					{{ form_widget(form.members.vars.prototype.membersince) }}
-				</div>
-			</div>
-		</div>
-		<div class="form-group">
-			{{ form_label(form.members.vars.prototype.weburl) }}
-			{{ form_widget(form.members.vars.prototype.weburl) }}
-		</div>
-		<div class="row">
-			<div class="col-sm-4">
-				<div class="form-group">
-					{{ form_label(form.members.vars.prototype.newsPref) }}
-					{{ form_widget(form.members.vars.prototype.newsPref) }}
-				</div>
-			</div>
-			<div class="col-sm-8">
-				{{ form_label(form.members.vars.prototype.emailCanonical) }}
-				{{ form_widget(form.members.vars.prototype.emailCanonical) }}
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-4">
-				<div class="form-group">
-					{{ form_label(form.members.vars.prototype.secondary) }}
-					{{ form_widget(form.members.vars.prototype.secondary) }}
-				</div>
-			</div>
-			<div class="col-sm-8">
-				<p class="text-muted">
-					The following fields are for University Retirees only.
-				</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-6">
-				<div class="form-group">
-					{{ form_label(form.members.vars.prototype.ustartdate) }}
-					{{ form_widget(form.members.vars.prototype.ustartdate) }}
-				</div>
-			</div>
-			<div class="col-sm-6">
-				<div class="form-group">
-					{{ form_label(form.members.vars.prototype.uretiredate) }}
-					{{ form_widget(form.members.vars.prototype.uretiredate) }}
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-6">
-				<div class="form-group">
-					{{ form_label(form.members.vars.prototype.utopunit) }}
-					{{ form_widget(form.members.vars.prototype.utopunit) }}
-				</div>
-			</div>
-			<div class="col-sm-6">
-				<div class="form-group">
-					{{ form_label(form.members.vars.prototype.udeptequiv) }}
-					{{ form_widget(form.members.vars.prototype.udeptequiv) }}
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-6">
-				<div class="form-group">
-					{{ form_label(form.members.vars.prototype.utitle) }}
-					{{ form_widget(form.members.vars.prototype.utitle) }}
-				</div>
-			</div>
-			<div class="col-sm-6">
-				<div class="form-group">
-					{{ form_label(form.members.vars.prototype.uempltype) }}
-					{{ form_widget(form.members.vars.prototype.uempltype) }}
-				</div>
-			</div>
-		</div>
-	</div>
-</script>
-
-<script id="tpl-residence-group" type="text/ng-template">
-	<div class="list-group-item">
-		<h5>Residence __num__</h5>
-		<div class="form-group">
-			{{ form_label(form.residences.vars.prototype.address1) }}
-			{{ form_widget(form.residences.vars.prototype.address1) }}
-		</div>
-		<div class="row">
-			<div class="col-sm-6">
-				<div class="form-group">
-					{{ form_label(form.residences.vars.prototype.address2) }}
-					{{ form_widget(form.residences.vars.prototype.address2) }}
-				</div>
-			</div>
-			<div class="col-sm-6">
-				<div class="form-group">
-					{{ form_label(form.residences.vars.prototype.address3) }}
-					{{ form_widget(form.residences.vars.prototype.address3) }}
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-6">
-				<div class="form-group">
-					{{ form_label(form.residences.vars.prototype.city)}}
-					{{ form_widget(form.residences.vars.prototype.city)}}
-				</div>
-			</div>
-			<div class="col-sm-3">
-				<div class="form-group">
-					{{ form_label(form.residences.vars.prototype.state) }}
-					{{ form_widget(form.residences.vars.prototype.state) }}
-				</div>
-			</div>
-			<div class="col-sm-3">
-				<div class="form-group">
-					{{ form_label(form.residences.vars.prototype.zip) }}
-					{{ form_widget(form.residences.vars.prototype.zip) }}
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-6">
-				<div class="form-group">
-					{{ form_label(form.residences.vars.prototype.legdistrict) }}
-					{{ form_widget(form.residences.vars.prototype.legdistrict) }}
-				</div>
-			</div>
-			<div class="col-sm-6">
-				<div class="form-group">
-					{{ form_label(form.residences.vars.prototype.country) }}
-					{{ form_widget(form.residences.vars.prototype.country) }}
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-xs-1">
-				<div class="form-group">
-					{{ form_label(form.residences.vars.prototype.primary) }}
-					{{ form_widget(form.residences.vars.prototype.primary) }}
-				</div>
-			</div>
-			<div class="col-xs-11 col-sm-5">
-				<div class="form-group">
-					{{ form_label(form.residences.vars.prototype.forseason) }}
-					{{ form_widget(form.residences.vars.prototype.forseason) }}
-				</div>
-			</div>
-			<div class="col-sm-6">
-				<div class="form-group">
-					{{ form_label(form.residences.vars.prototype.since) }}
-					{{ form_widget(form.residences.vars.prototype.since) }}
-				</div>
-			</div>
-		</div>
-	</div>
-</script>
-
-<script type="text/javascript">
-	// Todo: Angularize Me
-	jQuery(document).ready(function() {
-		var $personCollectionHolder;
-		var $addPersonBtn;
-		$addPersonBtn = $('#person-add');
-		// Get the div that holds the collection of members
-		$personCollectionHolder = $('#members-list-group');
-
-		// count the current member field groups we have (e.g. 2), use that as the new
-		// index when inserting a new item (e.g. 2)
-		$personCollectionHolder.data('index', $personCollectionHolder.children('.list-group-item').length);
-
-		$addPersonBtn.on('click', function (e) {
-			// prevent the link from creating a "#" on the URL
-			e.preventDefault();
-
-			// add a new member
-			var prototype = $('#tpl-members-group').html();
-
-			// get the new index
-			var index = $personCollectionHolder.data('index');
-
-			// Replace '__name__' in the prototype's HTML to
-			// instead be a number based on how many items we have
-			var newForm = prototype.replace(/__name__/g, index).replace(/__index__/g, index);
-
-			// increase the index with one for the next item
-			$personCollectionHolder.data('index', index + 1);
-
-			$personCollectionHolder.append(newForm);
-		});
-
-		var $resCollectionHolder;
-		var $addResBtn;
-		$addResBtn = $('#res-add');
-		// Get the div that holds the collection of members
-		$resCollectionHolder = $('#res-list-group');
-
-		// count the current member field groups we have (e.g. 2), use that as the new
-		// index when inserting a new item (e.g. 2)
-		$resCollectionHolder.data('index', $resCollectionHolder.children('.list-group-item').length);
-
-		$addResBtn.on('click', function (e) {
-			// prevent the link from creating a "#" on the URL
-			e.preventDefault();
-
-			// add a new member
-			var prototype = $('#tpl-residence-group').html();
-
-			// get the new index
-			var index = $resCollectionHolder.data('index');
-
-			// Replace '__name__' in the prototype's HTML to
-			// instead be a number based on how many items we have
-			var newForm = prototype.replace(/__name__/g, index).replace(/__num__/g, index+1).replace(/__index__/g, index);
-
-			// increase the index with one for the next item
-			$resCollectionHolder.data('index', index + 1);
-
-			$resCollectionHolder.append(newForm);
-		});
-	});
-</script>
+{% include 'UMRAMemberBundle:Person:_form_prototype.html.twig' with { 'form': form } %}
+{% include 'UMRAMemberBundle:Residence:_form_prototype.html.twig' with { 'form': form } %}
+<script type="text/javascript" src="{{ asset('js/umramember.jquery.personcollection.js') }}"></script>
+<script type="text/javascript" src="{{ asset('js/umramember.jquery.residencecollection.js') }}"></script>
 {% endblock %}
