--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Residence/_form_prototype.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Residence/_form_prototype.html.twig
@@ -2,74 +2,74 @@
     <div class="list-group-item">
         <h5>Residence __num__</h5>
         <div class="form-group">
-            {{ form_label(form.residences.vars.prototype.address1) }}
-            {{ form_widget(form.residences.vars.prototype.address1) }}
+            {{ form_label(residences.vars.prototype.address1) }}
+            {{ form_widget(residences.vars.prototype.address1) }}
         </div>
         <div class="row">
             <div class="col-sm-6">
                 <div class="form-group">
-                    {{ form_label(form.residences.vars.prototype.address2) }}
-                    {{ form_widget(form.residences.vars.prototype.address2) }}
+                    {{ form_label(residences.vars.prototype.address2) }}
+                    {{ form_widget(residences.vars.prototype.address2) }}
                 </div>
             </div>
             <div class="col-sm-6">
                 <div class="form-group">
-                    {{ form_label(form.residences.vars.prototype.address3) }}
-                    {{ form_widget(form.residences.vars.prototype.address3) }}
+                    {{ form_label(residences.vars.prototype.address3) }}
+                    {{ form_widget(residences.vars.prototype.address3) }}
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-6">
                 <div class="form-group">
-                    {{ form_label(form.residences.vars.prototype.city)}}
-                    {{ form_widget(form.residences.vars.prototype.city)}}
+                    {{ form_label(residences.vars.prototype.city)}}
+                    {{ form_widget(residences.vars.prototype.city)}}
                 </div>
             </div>
             <div class="col-sm-3">
                 <div class="form-group">
-                    {{ form_label(form.residences.vars.prototype.state) }}
-                    {{ form_widget(form.residences.vars.prototype.state) }}
+                    {{ form_label(residences.vars.prototype.state) }}
+                    {{ form_widget(residences.vars.prototype.state) }}
                 </div>
             </div>
             <div class="col-sm-3">
                 <div class="form-group">
-                    {{ form_label(form.residences.vars.prototype.zip) }}
-                    {{ form_widget(form.residences.vars.prototype.zip) }}
+                    {{ form_label(residences.vars.prototype.zip) }}
+                    {{ form_widget(residences.vars.prototype.zip) }}
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-6">
                 <div class="form-group">
-                    {{ form_label(form.residences.vars.prototype.legdistrict) }}
-                    {{ form_widget(form.residences.vars.prototype.legdistrict) }}
+                    {{ form_label(residences.vars.prototype.legdistrict) }}
+                    {{ form_widget(residences.vars.prototype.legdistrict) }}
                 </div>
             </div>
             <div class="col-sm-6">
                 <div class="form-group">
-                    {{ form_label(form.residences.vars.prototype.country) }}
-                    {{ form_widget(form.residences.vars.prototype.country) }}
+                    {{ form_label(residences.vars.prototype.country) }}
+                    {{ form_widget(residences.vars.prototype.country) }}
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-xs-1">
                 <div class="form-group">
-                    {{ form_label(form.residences.vars.prototype.primary) }}
-                    {{ form_widget(form.residences.vars.prototype.primary) }}
+                    {{ form_label(residences.vars.prototype.primary) }}
+                    {{ form_widget(residences.vars.prototype.primary) }}
                 </div>
             </div>
             <div class="col-xs-11 col-sm-5">
                 <div class="form-group">
-                    {{ form_label(form.residences.vars.prototype.forseason) }}
-                    {{ form_widget(form.residences.vars.prototype.forseason) }}
+                    {{ form_label(residences.vars.prototype.forseason) }}
+                    {{ form_widget(residences.vars.prototype.forseason) }}
                 </div>
             </div>
             <div class="col-sm-6">
                 <div class="form-group">
-                    {{ form_label(form.residences.vars.prototype.since) }}
-                    {{ form_widget(form.residences.vars.prototype.since) }}
+                    {{ form_label(residences.vars.prototype.since) }}
+                    {{ form_widget(residences.vars.prototype.since) }}
                 </div>
             </div>
         </div>
