--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Household/edit_full.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Household/edit_full.html.twig
@@ -3,7 +3,12 @@
 {% block title %}{{ entity.postalname }}{% endblock %}
 
 {% block body %}
-<h4>{{ entity.postalname }}</h4>
+<h4>
+	{{ entity.postalname }}
+	<a href="{{ path('UMRA_Household_edit', { 'id': entity.id }) }}" class="btn btn-default btn-xs">
+		<span class="fa fa-pencil"></span> Edit Names
+	</a>
+</h4>
 
 <div id="page-content-container">
 	<div class="row">
@@ -22,8 +27,8 @@
 				'allow_delete': true
 			} %}
 
-			<a class="btn btn-default" href="{{ referrer ? referrer : path('UMRA_Household') }}">
-				Back to list
+			<a class="btn btn-default" href="{{ path('UMRA_Household') }}">
+				Back to household list
 			</a>
 			{{ form_widget(form.submit) }}
 		{{ form_end(form, {'render_rest': false}) }}
