Add Luncheon management and registration
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -63,8 +63,13 @@
                         </a>
                     </li>
                     <li>
+                        <a href="{{ path('UMRA_Luncheon') }}">
+                            Manage Luncheons
+                        </a>
+                    </li>
+                    <li>
                         <a href="{{ path('sonata_admin_redirect') }}">
-                            Advanced Membership Administration
+                            Administration
                         </a>
                     </li>
                     {% endif %}
