--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Person/profile.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Person/profile.html.twig
@@ -7,6 +7,8 @@
     <ul class="nav nav-tabs">
         <li class="active"><a href="#overview" data-toggle="tab">Overview</a></li>
         <li><a href="#household" data-toggle="tab">Household Details</a></li>
+        <li><a href="#renewals" data-toggle="tab">Membership Renewal</a></li>
+        <li><a href="#luncheons" data-toggle="tab">Luncheon Registration</a></li>
         <li><a href="#details" data-toggle="tab">Account Details</a></li>
     </ul>
     <div class="tab-content">
@@ -16,6 +18,18 @@
         <div class="tab-pane fade" id="household">
             <br />
             {% include 'UMRAMemberBundle:Household:detail.html.twig' with { 'entity': user.household } %}
+        </div>
+        <div class="tab-pane fade" id="renewals">
+            <br />
+            <div class="col-sm-6">
+                {% include 'UMRAMemberBundle:Registration:renew_panel.html.twig' with {'form': renewalForm } %}
+            </div>
+        </div>
+        <div class="tab-pane fade" id="luncheons">
+            <br />
+            <div class="col-sm-6">
+                {% include 'UMRAMemberBundle:Luncheon:_register_form.html.twig' with { 'form': luncheonForm } %}
+            </div>
         </div>
         <div class="tab-pane fade" id="details">
             <br />
@@ -29,9 +43,6 @@
                         <input type="submit" value="{{ 'change_password.submit'|trans }}" class="btn btn-warning" />
                     </form>
                 </div>
-            </div>
-            <div class="col-sm-6">
-                {% include 'UMRAMemberBundle:Registration:renew_panel.html.twig' with {'form': renewalForm } %}
             </div>
         </div>
     </div>
