--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Person/profile.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Person/profile.html.twig
@@ -21,14 +21,39 @@
         </div>
         <div class="tab-pane fade" id="renewals">
             <br />
-            <div class="col-sm-6">
+            <div class="col-sm-5">
                 {% include 'UMRAMemberBundle:Registration:renew_panel.html.twig' with {'form': renewalForm } %}
+            </div>
+            <div class="col-sm-7">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            Past Membership Fees
+                        </h4>
+                    </div>
+                    {% include 'UMRAMemberBundle:Trans:_table.html.twig' with {
+                        'entities': memberFees
+                    } %}
+                </div>
             </div>
         </div>
         <div class="tab-pane fade" id="luncheons">
             <br />
-            <div class="col-sm-6">
+            <div class="col-sm-4">
                 {% include 'UMRAMemberBundle:Luncheon:_register_form.html.twig' with { 'form': luncheonForm } %}
+            </div>
+            <div class="col-sm-8">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            Past Luncheon Registrations
+                        </h4>
+                    </div>
+                    {% include 'UMRAMemberBundle:Trans:_table.html.twig' with {
+                        'entities': luncheonRegs,
+                        'show_luncheons': true
+                    } %}
+                </div>
             </div>
         </div>
         <div class="tab-pane fade" id="details">
