--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Luncheon/show.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Luncheon/show.html.twig
@@ -1,7 +1,7 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>{{ entity.luncheonDate|date('Y-m') }} Luncheon</h1>
+    <h1>{{ entity.luncheonDate|date('F Y') }} Luncheon</h1>
 
     <table class="table">
         <tbody>
